TODO
--------------------
- change file format to support CONTINUOUS SUBDIVISION

UML-Editor 3.2.3 (2011-06-xx) 
----------------------------------
- bug iliimp: incomplete import of EXTERNAL+EXTENDED reference attr 

UML-Editor 3.2.2 (2011-06-30) 
----------------------------------
- bug iliexp: exported an unqualified name if source element at model level and referenced element in a topic in the same model
- bug iliexp: wrong ordering of elements in model if struct at model level contained a reference to a class inside a topic

UML-Editor 3.2.1 (2011-06-29) 
----------------------------------
- bug iliimp: missing FormattedType
- bug iliimp: import with wrong language of modelling
- bug iliimp: incomplete import of EXTENDED struct attr
- ili2c-4.3.6

UML-Editor 3.2.0 (2010-12-28) 
----------------------------------
- FILE FORMAT CHANGED: 
-   This version can read old file format.
-   This version can save old file format with loss
-   Old versions can read new file format with loss.
-   use a filename that ends with "-uml1.uml" to save old file format.
- bug uml file decoder: handle unknown xml file formats
- bug uml file decoder: "Name" (NlsString) content was replaced by "DefLangName" 
- seperate setting of model language from user interface language
- support multilingual models
- catch empty names
- ili2c-4.3.3
- bug: DomainDef  selection dialog called by AttributeDef dialog suppressed DomainDefs referenced by dependecies of the ClassDef

UML-Editor 3.1.5 (2009-10-20) 
----------------------------------
- ili2c-4.2.0
- iliexp: missleading errmsg "no participant attached" if association incomplete defined

UML-Editor 3.1.4 (2009-02-26) 
----------------------------------
- iliexp: link "missing min/max" errmsg to AttributeDef (instead of ClassDef)
- bug iliexp: NullPointerException if no min/max (date/time/dateTime)
- iliexp: check if names adhere to ili rules "[a-zA-Z][a-zA-Z_0-9]*"
- iliexp: run ili-compiler only if no errors found in model by umleditor